--- a/Science Notes/J3 Science Notes/book2/2. 生命的统一性.md
+++ b/Science Notes/J3 Science Notes/book2/2. 生命的统一性.md
@@ -215,6 +215,16 @@
 
 
 
-![image-20220901204007285](C:\Users\wongj\Documents\Typora\School Notes\Science Notes\J3 Science Notes\book2\image-20220901204007285.png)
+1. 寄生蜂的卵经过受精作用后发育成雌蜂，其体内的体细胞中有10对染色体；未受精的乱发育成雄峰，请问雄峰的染色体数目是多少？
+
+   A. 20条不成对
+
+   **B. 10条不成对**
+
+   C. 5对
+
+   D. 10对
+
+2. 人工选择
 
 `by jiahuiiiii @ 1st Sept 2022 21:28`
