--- a/Science Notes/J3 Science Notes/book2/5. 宇宙探秘.md
+++ b/Science Notes/J3 Science Notes/book2/5. 宇宙探秘.md
@@ -13,7 +13,8 @@
 
 |     科学家     |        发现         |                           大致内容                           |
 | :------------: | :-----------------: | :----------------------------------------------------------: |
-|  埃拉托斯特尼  |    地球是个球体     |                                                              |
+|                |                     |                  对天狼星的观测，发明了历法                  |
+|  埃拉托斯特尼  |    地球是个球体     |                       计算出地球的周长                       |
 |     托勒密     |       地心说        | 地球是宇宙的中心，是静止不动的，太阳、月亮及其他的行星都绕地球运动 |
 |     哥白尼     |       日心说        |         太阳是静止不动的，地球和其他行星都绕太阳运动         |
 |     开普勒     |  行星运动三大定律   |                行星围绕太阳运动的轨道都是椭圆                |
@@ -24,22 +25,22 @@
 
 ## 5.3 太空探索
 
-### 5.3.1 现代太空探索 
+### 5.3.1 现代太空探索
 
-- 苏联“卫星”号运载火箭：第一枚发射成功的运载火箭
 - 太空飞行器：
   - 无人太空飞行器【人造地球卫星、太空探测器】
   - 载人太空飞行器【载人飞船、太空站、太空梭、空天飞机(研发ing)】
 
-| 人物                           | 飞行器名称/国家         | 成就                       |
-| ------------------------------ | ----------------------- | -------------------------- |
-|                                | 【德国】                | 第一枚弹道导弹             |
-| 尤里·加加林                    | 【苏联】                | 首次载人太空飞行           |
-| 阿里克谢·列昂诺夫              | 【苏联】                | 人类首次太空行走           |
-| 尼尔·阿姆斯特朗、巴兹·奥尔德林 | 阿波罗11号【美国】      | 人类第一次踏上月球         |
-|                                | “水手4号”探测器【美国】 | 第一个成功到达火星         |
-|                                | “海盗1号”探测器         | 在火星着陆                 |
-|                                | “新视野号”【美国】      | 掠过冥王星并传回冥王星照片 |
+| 人物                           | 飞行器名称/国家          | 成就                                                         |
+| ------------------------------ | ------------------------ | ------------------------------------------------------------ |
+|                                | “卫星”号运载火箭【苏联】 | 第一枚发射成功的**运载火箭**【用于发射太空飞行器的基本条件】 |
+|                                | 【德国】                 | 第一枚弹道导弹                                               |
+| 尤里·加加林                    | 【苏联】                 | 首次载人太空飞行                                             |
+| 阿里克谢·列昂诺夫              | 【苏联】                 | 人类首次太空行走                                             |
+| 尼尔·阿姆斯特朗、巴兹·奥尔德林 | 阿波罗11号【美国】       | 人类第一次踏上月球                                           |
+|                                | “水手4号”探测器【美国】  | 第一个成功到达火星                                           |
+|                                | “海盗1号”探测器          | 在火星着陆                                                   |
+|                                | “新视野号”【美国】       | 掠过冥王星并传回冥王星照片                                   |
 
 - 人类实现了三个领域的航空探索：
   - 近地空间探索 ——> 月球探索 ——> 太阳系行星空间探索
