--- a/Science Notes/J3 Science Notes/book2/4. 星与星系.md
+++ b/Science Notes/J3 Science Notes/book2/4. 星与星系.md
@@ -51,7 +51,7 @@
   | **天狼星** |  **大犬座**  |
   | **南门二** | **半人马座** |
   | **参宿七** |  **猎户座**  |
-  |   老人星   |  南十字座？  |
+  |   老人星   |    船底座    |
   |   角宿一   |    室女座    |
   |   心宿二   |    天蝎座    |
 
