shit i'm such a failure

--- a/Science Notes/J2 Science Notes/11. 家庭用电.md
+++ b/Science Notes/J2 Science Notes/11. 家庭用电.md
@@ -129,7 +129,22 @@
 
 ### 11.4.2 触电类型
 
+1. 单线触电
+   - 人站在地面上，一手接触火线
+   - 手、脚之间存在电压，有电流通过人体
+2. 双线触电
+   - 人与地面绝缘【站在凳子上】，双手分别接触火线和中线
+   - 双手之间存在电压，有电流流过人体
+3. 高压电弧触电
+   - 人靠近高压带电体一定距离时，高低压带电体和人体之间会产生放电现象
+   - 有电流通过人体
+4. 跨步电压触电
+   - 高压输电线落在地面上，人在落点附近走路时，两脚之间存在电压，会有电流流过人体
 
+#### 触电急救
+
+1. 切断电源
+2. 迅速使触电到人拜托电源
 
 #### 鸟儿不会触电的原因
 
