--- a/Science Notes/J1 Science Notes/3. 测量.md
+++ b/Science Notes/J1 Science Notes/3. 测量.md
@@ -59,6 +59,7 @@
 - 体积：物体占有空间的大小【m³】
   - 长方形：长 × 宽 × 高
   - 圆柱体：π × 半径² × 高
+  - 两个细粗不同的量筒，若它们的最小刻度值均为“ml”，则为细量筒准确度高
 
 ## 质量
 
@@ -72,6 +73,12 @@
   - 不能超过最大称量
   - 保持天平干燥、清洁
   - 忘记归零：测量值大于真实值
+
+- 三杆天平的使用
+  - 把天平放在水平面上
+  - 把三个游码都移到横梁左端的0刻度线处 
+  - 称量时，先移动中梁游码，再移动后梁游码，最后才移动前梁游码
+  - 物质的质量就是三根横梁上的读数之和
 
 
 ## 温度
@@ -123,10 +130,13 @@
 - 正常体温：36.9°C
 - 人体最高体温：42°C
 - 体温计：水银体温计、电子体温计、红外体温计（耳温枪、体外温度计）
+- 某一体温计的读数为38°C，在没有向下甩的情况下直接给一位病人量体温，若测量后的体温计读数仍为38°C，则该病人的实际体温可能低于或等于38°C
 
 ![常用液体温度计和体温计的差别](https://i.ibb.co/KDPrBBL/image.png)
 
 ## 时间
+
+- 原子铯(sè)钟：目前世界上精度最高的钟
 
 ### 秒表的使用
 
