--- a/Science Notes/J1 Science Notes/4. 观察生物.md
+++ b/Science Notes/J1 Science Notes/4. 观察生物.md
@@ -17,5 +17,34 @@
 | ---------- | ------------------------------------------------------------ |
 | 繁殖       | ①动植物通过有性繁殖以便能产生具有变异特质的下一代，以应付变化莫测的环境 ②微生物或一些真菌生物通过无性繁殖以便能在最短的时间产生大量下一代 |
 | 排泄       | 动植物通过排泄作用将多余的物质或**新陈代谢废物**排出体外（二氧化碳，水，粪便等） |
-| 遗传与变异 | ①动植物能通过繁殖将本身所具有的特征遗传给下一代 ②变异的产生能很好延续下一代因为其后代能更容易适应环境 |
+| 遗传与变异 | ①动植物能通过繁殖将本身所具有的**特征**遗传给下一代 ②变异的产生能很好延续下一代因为其后代能**更容易适应环境** |
+
+## 动物
+
+### 脊椎动物
+
+![脊椎动物](https://i.ibb.co/wgNKh45/image.png)
+
+### 无脊椎动物
+
+| 种类     | 主要特征                                                     | 举例                                |
+| -------- | ------------------------------------------------------------ | ----------------------------------- |
+| 原生动物 | ① 身体微小 ②结构简单，整个身体由一个细胞构成                 | 草履虫、变形虫                      |
+| 腔肠动物 | ①生活在水中 ②身体呈辐射对称 ③体内有消化腔 ④有口无肛门 ⑤是最低等的多细胞生物 ⑥身体柔软 ⑦长有线状的触手（捕食） | 水螅、海蜇、海葵、珊瑚              |
+| 扁形动物 | ①身体背腹扁平 ②头部和尾部分化 ③有口无肛门 ④两侧对称          | 涡虫、猪肉绦(tāo)虫、扁形虫、血吸虫 |
+| 线形动物 | ①身体细长，呈圆柱形，两端略尖 ②寄生于人和动物的体内 ③身体前端有口，后端有肛门 | 蛔虫、钩虫                          |
+| 环节动物 | ①身体由许多相似的环状体节组成 ②有真体腔 ③栖息于海洋、淡水或潮湿的土壤中 | 蚯蚓、沙蚕(cán)、水蛭（蚂蝗）       |
+| 软体动物 | ①身体柔软 ②有外套膜 ③身体外面有贝壳或有被外套膜包被的内壳    | 蚌(bàng)、蜗牛、乌贼、章鱼、鱿鱼    |
+| 节肢动物 | ①身体及附肢分节 ②体表有外骨骼 ③是种类和数量最多的一类动物    | 虾、蜈蚣、蝗虫、昆虫、蜘蛛、螃蟹    |
+| 海绵动物 | ①最原始的多细胞生物 ②没有口 ③固着在岩石上                    |                                     |
+| 棘皮动物 | ①身体表面有棘 ②身体呈辐射对称 ③海生                          | 海参、海盘车、海胆                  |
+
+- 昆虫：种类最多的一类
+  - 成体：三对足、两对翅
+  - 躯干由一些列的环节和体节组成
+  - 没有骨骼，有外骨骼
+
+## 植物
+
+
 
