--- a/Science Notes/J1 Science Notes/4. 观察生物.md
+++ b/Science Notes/J1 Science Notes/4. 观察生物.md
@@ -5,13 +5,13 @@
 - 生物：自然界中具有生命的物体，具有生物的基本特征，包括动物、植物、微生物等。生石花、珊瑚虫、细菌、蘑菇等都属于生物
 - 非生物：非生物是自然界中不具有生命的物体，不具备生物的所有特征，如珊瑚、钟乳石、机器人、桌椅等
 
-| 生命特征 | 动物                                         | 植物                                                         |
-| :------: | -------------------------------------------- | ------------------------------------------------------------ |
-|   营养   | 动物以植物或其他动物为**食物**，从中获取营养 | 植物需要光照，通过**光合作用**制造营养物质                   |
-|   生长   | 动物从幼体慢慢成长成成体                     | 植物种子萌发生长为幼苗，幼苗不断长大                         |
-|   呼吸   | 生物需要吸入氧气，呼出二氧化碳               | 植物白天必须进行呼吸作用和光合作用以产生能量供己用或储存起来 |
-|   运动   | 能自由移动                                   | 能小规模移动                                                 |
-|   激感   | 动物为了自我保护，以灵敏的激感反应保护自身   | 植物也有对外界的刺激产生反应，除了保护自己也为了得到更多的能源和营养 |
+| 生命特征 | 动物                                                     | 植物                                                         |
+| :------: | -------------------------------------------------------- | ------------------------------------------------------------ |
+|   营养   | 动物以植物或其他动物为**食物**，从中获取营养【异生营养】 | 植物需要光照，通过**光合作用**制造营养物质 【自生营养】      |
+|   生长   | 动物从幼体慢慢成长成成体                                 | 植物种子萌发生长为幼苗，幼苗不断长大                         |
+|   呼吸   | 生物需要吸入氧气，呼出二氧化碳                           | 植物白天必须进行呼吸作用和光合作用以产生能量供己用或储存起来 |
+|   运动   | 能自由移动                                               | 能小规模移动                                                 |
+|   激感   | 动物为了自我保护，以灵敏的激感反应保护自身               | 植物也有对外界的刺激产生反应，除了保护自己也为了得到更多的能源和营养 |
 
 | 生命特征   |                                                              |
 | ---------- | ------------------------------------------------------------ |
@@ -23,28 +23,57 @@
 
 ### 脊椎动物
 
-![脊椎动物](https://i.ibb.co/wgNKh45/image.png)
+![脊椎动物](C:\Users\wongj\Documents\Typora\School Notes\Science Notes\J1 Science Notes\images\脊椎动物.png)
 
 ### 无脊椎动物
 
-| 种类     | 主要特征                                                     | 举例                                |
-| -------- | ------------------------------------------------------------ | ----------------------------------- |
-| 原生动物 | ① 身体微小 ②结构简单，整个身体由一个细胞构成                 | 草履虫、变形虫                      |
-| 腔肠动物 | ①生活在水中 ②身体呈辐射对称 ③体内有消化腔 ④有口无肛门 ⑤是最低等的多细胞生物 ⑥身体柔软 ⑦长有线状的触手（捕食） | 水螅、海蜇、海葵、珊瑚              |
-| 扁形动物 | ①身体背腹扁平 ②头部和尾部分化 ③有口无肛门 ④两侧对称          | 涡虫、猪肉绦(tāo)虫、扁形虫、血吸虫 |
-| 线形动物 | ①身体细长，呈圆柱形，两端略尖 ②寄生于人和动物的体内 ③身体前端有口，后端有肛门 | 蛔虫、钩虫                          |
-| 环节动物 | ①身体由许多相似的环状体节组成 ②有真体腔 ③栖息于海洋、淡水或潮湿的土壤中 | 蚯蚓、沙蚕(cán)、水蛭（蚂蝗）       |
-| 软体动物 | ①身体柔软 ②有外套膜 ③身体外面有贝壳或有被外套膜包被的内壳    | 蚌(bàng)、蜗牛、乌贼、章鱼、鱿鱼    |
-| 节肢动物 | ①身体及附肢分节 ②体表有外骨骼 ③是种类和数量最多的一类动物    | 虾、蜈蚣、蝗虫、昆虫、蜘蛛、螃蟹    |
-| 海绵动物 | ①最原始的多细胞生物 ②没有口 ③固着在岩石上                    |                                     |
-| 棘皮动物 | ①身体表面有棘 ②身体呈辐射对称 ③海生                          | 海参、海盘车、海胆                  |
+| 种类     | 主要特征                                                     | 举例                             |
+| -------- | ------------------------------------------------------------ | -------------------------------- |
+| 腔肠动物 | ①生活在水中 ②身体呈辐射对称 ③体内有消化腔 ④有口无肛门 ⑤是最低等的多细胞生物 ⑥身体柔软 ⑦长有线状的触手（捕食） | 水螅、海蜇、海葵、珊瑚           |
+| 扁形动物 | ①身体背腹扁平 ②有头部和尾部的分化 ③有口无肛门 ④两侧对称      | 涡虫、绦(tāo)虫、扁形虫、血吸虫  |
+| 线形动物 | ①身体细长，呈圆柱形，两端略尖 ②寄生于人和动物的体内 ③身体前端有口，后端有肛门 | 蛔虫、钩虫                       |
+| 环节动物 | ①身体由许多相似的环状体节组成 ②有真体腔 ③栖息于海洋、淡水或潮湿的土壤中 | 蚯蚓、沙蚕(cán)、水蛭（蚂蝗）    |
+| 软体动物 | ①身体柔软 ②有外套膜 ③身体外面有贝壳或有被外套膜包被的内壳    | 蚌(bàng)、蜗牛、乌贼、章鱼、鱿鱼 |
+| 节肢动物 | ①身体及附肢分节 ②体表有外骨骼 ③是种类和数量最多的一类动物    | 虾、蜈蚣、蝗虫、昆虫、蜘蛛、螃蟹 |
+| 海绵动物 | ①最原始的多细胞生物 ②没有口 ③固着在岩石上                    |                                  |
+| 棘皮动物 | ①身体表面有棘 ②身体呈辐射对称 ③海生                          | 海参、海盘车、海胆               |
 
 - 昆虫：种类最多的一类
   - 成体：三对足、两对翅
   - 躯干由一些列的环节和体节组成
   - 没有骨骼，有外骨骼
+  - 躯干由一系列环节（体节）组成，进一步集合成头、胸和腹
+  - 昆虫对于人类利弊共存
+    - 有利：蛾、螳螂、蜻蜓
+    - 有害：蟑螂、蝇、蝗虫
+  - 昆虫资源利用将成为一种新兴产业
 
 ## 植物
 
+-  区分裸子植物和被子植物
 
+  ![image](https://i.ibb.co/nz3vj00/image.png)
+
+![植物](C:\Users\wongj\Documents\Typora\School Notes\Science Notes\J1 Science Notes\植物.png)
+
+## 生物的适应性
+
+- 生物具有与其环境相适应的形态结构和生理特征
+
+| 生物            | 环境                   | 特征                                                         |
+| --------------- | ---------------------- | ------------------------------------------------------------ |
+| 猪笼草          | 生活在缺乏营养的土壤中 | ①通过捕捉昆虫来获取营养 ②捕虫笼能分泌香味引诱昆虫前来 ③瓶口光滑，昆虫容易滑落瓶内，被猪笼草消化吸收 |
+| 大王花/莱佛士花 |                        | ①花有一股类似于腐肉的恶臭，会吸引许多昆虫，帮助繁殖          |
+| 红树林          | 热带地区的咸水         | ①巨大的根系扎入周围的土和沙中，固着并不断地生长              |
+| 睡莲            | 淡水中                 | ①花和宽大扁平的叶子漂浮在水面上，水下有着长长的茎 ②根把植物固定在池塘底部的淤泥中 |
+
+- 保护色：动物适应栖息环境而具有与环境色彩相似的体色，有利于动物躲避敌害或捕猎其他动物
+- 警戒色：色彩鲜艳，容易识别，能够对敌害起预先警示的作用，有利于动物的自我保护
+- 拟态：生物的体表形状或色泽能够融入四周环境并隐藏起来的特征
+- 生物不仅能够适应环境，也能影响环境
+  - 生物的数量和分布会对环境中其他多种生物产生影响
+    - 草原上草本植物的多少，会影响草食动物的数量
+  - 生物的生命活动也会对环境产生影响
+    - 森林的蒸腾作用会增加空气的湿度，进而增加降雨量
+    - 蚯蚓在土壤中活动，使土壤疏松，提高土壤的通气和吸水能力，它们的排泄物还可以使土壤肥沃
 
