--- a/Science Notes/J1 Science Notes/4. 观察生物.md
+++ b/Science Notes/J1 Science Notes/4. 观察生物.md
@@ -41,8 +41,8 @@
 - 昆虫：种类最多的一类
   - 成体：三对足、两对翅
   - 躯干由一些列的环节和体节组成
-  - 没有骨骼，有外骨骼
-  - 躯干由一系列环节（体节）组成，进一步集合成头、胸和腹
+  - 没有骨骼，有由几丁质构成的外骨骼
+  - 躯干由一系列环节（体节）组成，进一步集合成头、胸和腹，翅和足都位于胸部
   - 昆虫对于人类利弊共存
     - 有利：蛾、螳螂、蜻蜓
     - 有害：蟑螂、蝇、蝗虫
