朕乏了，不干了。

--- a/Science Notes/J1 Science Notes/5. 细胞和生物体.md
+++ b/Science Notes/J1 Science Notes/5. 细胞和生物体.md
@@ -160,6 +160,25 @@
   |     食物泡      |         消化食物         |
   | 伸缩泡 & 收集管 | 收集代谢废物和多余的水分 |
 
+
+
+#### 变形虫
+
+- 可以任意改变性状
+- 由细胞核控制其活动
+- 细胞质分为内质和外质
+- 有伸缩泡
+- 伪足：捕水中浮游生物
+- 无口无肛门
+- 生殖：无性生殖
+- 有食物泡
+
+#### 眼虫
+
+- 外观：棱形、黄绿色
+- 兼具植物和动物特征
+- 营养方式有自身营养和异生营养
+
 #### 细菌
 
 ![细菌](https://i.ibb.co/SBpnr7c/image.png)
@@ -168,7 +187,7 @@
 
 - **菌落**：细菌大量繁殖后形成的细菌团
 
-- 细菌的细胞有三种形态：球状、杆状、螺旋状
+- 细菌的细胞有三种形态：球状【无鞭毛】、杆状【可有可无鞭毛】、螺旋状【多具有鞭毛】
 
 - 可根据细菌形态将细菌分为**球菌、杆菌和螺旋菌**
 
@@ -199,6 +218,7 @@
 
 - 有些食物不能用高温加热（如牛奶），否则会影响它们的营养和风味。我们可快速将它们加热至一定温度（一般为60 ~ 85 ℃），持续15 ~ 30 min，然后迅速冷却
 - 既能杀死食物中的大部分微生物，又能保持食物原有的风味
+- 巴斯德是一位近代微生物学家，他也发明了预防接种的方法。预防接种是将减毒性病毒注射到人或动物体内
 
 #### 酵母菌
 
@@ -208,6 +228,8 @@
 - 形态：通常为圆形、卵圆形或椭圆形，比细菌个体大得多
 - 结构：主要包括**细胞壁**、细胞膜、细胞质和细胞核等
 - 生殖方式：出芽无性生殖
+- 能量来源：碳水化合物（糖类）
+- 在缺氧情况下会将糖分解成二氧化碳和酒精
 - 应用：发酵食品、酿酒
 
 ##### 多细胞真菌
