--- a/Science Notes/J1 Science Notes/6. 多细胞生物体的结构.md
+++ b/Science Notes/J1 Science Notes/6. 多细胞生物体的结构.md
@@ -14,7 +14,7 @@
   - ①细胞核分裂为两个新的细胞核
   - ②两个细胞核之间的细胞质中央形成新的细胞膜，并产生新的细胞壁
 - 遗传物质
-  - 细胞核中有含有遗传物质的染色质，由DNA和蛋白质组成
+  - 细胞核中有含有遗传物质的**染色质**，由DNA和蛋白质组成
   - 在未分裂的细胞核和分裂期间的细胞核中，染色质呈细长的丝状，并交织成网状
   - 进入分裂期时，每条染色质细丝就高度螺旋化，缩短变粗，成为一条圆柱状或杆状的染色体，染色体经过复制而数量倍增
   - 当分裂时，染色体平均分配到两个新的细胞中，保证了子细胞和母细胞具有相同的遗传物质
@@ -32,14 +32,15 @@
 
 ### 细胞的生长
 
-- 细胞生长：刚分裂产生的子细胞的大小一般只有母细胞的一半，它们吸收营养物质，合成自身的组成物质，不断长大
+- 细胞生长：刚分裂产生的子细胞的大小一般只有母细胞的一半，它们吸收营养物质，合成自身的组成物质，体积不断增大
 - 意义：使细胞的体积增大
 
 ### 细胞的分化
 
 - 在细胞分裂的过程中，一些子细胞长到和母细胞一般大小时就继续分裂
 - 细胞分化：一些子细胞则不再分裂的，而在形态和功能上发生变化，形成具有**不同形态，结构和功能的细胞**
-- 组织：形态相似、结构相同，具有一定功能的细胞群
+- **组织**：*形态相似、结构相同，具有一定功能的细胞群*
+  - 细胞分裂→细胞生长→细胞分化→组织
 - 意义：细胞种类增加；细胞分化形成组织
 
 #### 干细胞
@@ -50,4 +51,70 @@
 
 ## 被子植物的组织和器官
 
-- 动植物的结构层次：细胞 ——> 组织 ——> 器官 ——> 系统 ——> 生物体
+- 植物从小到大的结构层次：细胞 ——> 组织 ——> 器官  ——> 植物体
+
+### 被子植物的组织
+
+| 组织     | 结构特点                                             | 主要功能                                       | 例子                                    |
+| -------- | ---------------------------------------------------- | ---------------------------------------------- | --------------------------------------- |
+| 保护组织 | 细胞排列整齐                                         | 保护作用                                       | 根、茎、叶的表面                        |
+| 分生组织 | 细胞排列紧密，无细胞间隙，细胞小，细胞核大，细胞壁薄 | 有持续性或周期性分裂的能力                     | 根尖和芽尖                              |
+| 营养组织 | 细胞壁薄                                             | 含叶绿素进行光合作用；储存营养物质             | 根、茎、叶、花、果实、种子              |
+| 输导组织 | 细胞呈管状                                           | 运输根吸收的水分，无机盐以及由叶制造的营养物质 | 茎、叶脉、根【维管束 - 木质部和韧皮部】 |
+
+### 被子植物的器官
+
+- **器官**：*不同组织按一定次序组合形成具有一定功能的结构*
+- 被子植物的器官：根、茎、叶、花、果实、种子
+  - 根：从土壤中吸收水和无机盐
+  - 叶：制造营养物质，即有机物
+  - 茎：把根和叶连接起来，输送水、无机盐和有机物
+  - 营养器官：根、茎、叶
+  - 生殖器官：花、果实、种子
+  - 这六种器官构成了一个完整的植物体
+- ![构成叶片的组织](https://i.ibb.co/34rvJBW/image.png)
+  - 保护组织：上表皮、下表皮
+  - 营养组织：叶肉
+  - 输导组织：叶脉
+
+## 人体的组织、器官和系统
+
+- 人体从小到大的结构层次：细胞 ——> 组织 ——> 器官 ——> 系统 ——> 人体
+
+### 组织
+
+| 组织     | 结构特点                             | 主要功能                 | 分布                                             |
+| -------- | ------------------------------------ | ------------------------ | ------------------------------------------------ |
+| 上皮组织 | 由密集排列的上皮细胞组成             | 保护功能；分泌和吸收物质 | 皮肤、内脏器官的表面和官腔的内表面               |
+| 结缔组织 | 细胞间隙较大，细胞间质较多，形态多样 | 运输、支持和连接         | 血液、软骨、肌腱、淋巴、皮下脂肪，体内分布广     |
+| 肌肉组织 | 由肌细胞组成                         | 能收缩和舒张，产生运动   | 心肌：心脏；骨骼肌：四肢、躯体；平滑肌：体内器官 |
+| 神经组织 | 由神经细胞构成的                     | 接受刺激，产生并传导兴奋 | 脑、脊髓、神经                                   |
+
+### 器官
+
+- **器官**：*不同组织按一定次序组合形成具有一定功能的结构*
+
+| 器官     |                      |
+| :------- | :------------------- |
+| 感觉器官 | 眼、耳、鼻、舌、皮肤 |
+| 消化器官 | 胃、肠、肝、胰脏     |
+| 呼吸器官 | 肺                   |
+| 循环器官 | 心脏、血液、血管     |
+| 生殖器官 | 睾丸、卵巢           |
+| 排泄器官 | 肾、膀胱             |
+
+### 系统
+
+- 系统：能够共同完成一种或几种生理功能的多个器官按一定的顺序排列在一起
+
+| 系统       | 组成                                 | 功能                                                         |
+| ---------- | ------------------------------------ | ------------------------------------------------------------ |
+| 消化系统   | 消化道和消化腺                       | 消化和吸收食物中的各种营养成分                               |
+| 循环系统   | 心脏和血管                           | ①运输人体细胞需要的氧和养料 ②运走细胞产生的二氧化碳等废物 ③负责血液循环 |
+| 呼吸系统   | 呼吸道和肺                           | 吸取外界的氧气和呼出体内的二氧化碳                           |
+| 生殖系统   | 生殖腺和生殖器官【依性别而异】       | 生殖繁衍                                                     |
+| 神经系统   | 脑、脊髓和神经                       | 收集身体各处传来的讯息并传给相关的部位作出反应               |
+| 运动系统   | 骨、骨连接（关节是其中一种）、骨骼肌 | ①运动、支持和保护 ②协调肢体运动                              |
+| 内分泌系统 | 内分泌腺                             | 分泌各种激素，调节人体的各种生理活动                         |
+| 泌尿系统   | 肾脏、输尿管、膀胱、尿道             | 以尿的形式排出人体内绝大部分的代谢物                         |
+
