--- a/Science Notes/J1 Science Notes/8. 物质常见的性质.md
+++ b/Science Notes/J1 Science Notes/8. 物质常见的性质.md
@@ -1,8 +1,97 @@
 # 第八章 物质常见的性质
 
-## 
+## 熔化和凝固
+
+- 熔化：物质从固态变成液态的过程
+- 凝固：物质从液态变成固态的过程；熔化的逆过程
+
+### 晶体和非晶体
+
+|                  | 晶体                       | 非晶体                       |
+| ---------------- | -------------------------- | ---------------------------- |
+| 粒子排列         | 按照一定空间顺序排列的固体 | 不按照一定空间顺序排列的固体 |
+| 熔化过程         | 固、液共存                 | 逐渐变软再变稀               |
+| 温度             | 不断吸热，温度保持不变     | 不断吸热，温度持续上升       |
+| 固态、液态分界点 | 有分界点                   | 没有明显分界点               |
+| 熔点和凝固点     | 有特定熔点和凝固点         | 没有熔点和凝固点             |
+| 例子             | 海波（硫代硫酸钠）、石膏   | 松香、蜡、玻璃、塑料、橡胶   |
+
+- 熔点：晶体熔化时的温度
+  - 不容晶体熔点不同，熔点是**晶体的一种特性**
+  - 非晶体没有熔点
+
+- 凝固点：晶体在凝固过程中保持不变的温度
+  - 同意晶体的凝固点和熔点相同
+  - 非晶体没有凝固点
+
+| 物质     | 熔点 (℃)   | 物质 | 熔点 (℃) | 物质     | 熔点 (℃) |
+| -------- | ---------- | ---- | -------- | -------- | -------- |
+| 金刚石   | 3550       | 金   | 1064     | 冰       | 0        |
+| 钨       | 3410       | 银   | 962      | 固态水银 | -39      |
+| 纯铁     | 1535       | 铝   | 660      | 固态酒精 | -117     |
+| 各种钢   | 1300～1400 | 铅   | 327      | 固态氮   | -210     |
+| 各种铁铸 | 1200 左右  | 锡   | 232      | 固态氢   | -259     |
+| 铜       | 1083       | 海波 | 48       | 固态氦   | -272     |
 
 - 熔点和凝固点的区别：
   - 两个点都是晶体在统一临界状态下的温度。
   - 同一种物质的**熔点和凝固点是同一个温度**，只不过是考虑的物态变化方向不同，从而叫出了不同的名字
   - **当物质从固态变化为液态时，叫熔点；当物质从液态变化为固态时，这个温度叫凝固点**
+- 无论晶体还是非晶体，熔化时都要从外界吸收热量；凝固时都要向外放出热量
+
+## 蒸发与沸腾
+
+### 蒸发与沸腾的比较
+
+- 蒸发和沸腾都是汽化现象，能使物质从**液态变为气态**，都**吸收能量**
+- 不同物质沸点不同，沸点也是物质的一种特性
+
+| 异同点   | 蒸发                                | 沸腾               |
+| -------- | ----------------------------------- | ------------------ |
+| 发生部位 | 液面                                | 内部、液面同时进行 |
+| 剧烈程度 | 缓慢                                | 剧烈               |
+| 温度条件 | 任何温度                            | 一定温度（沸点）   |
+| 影响因素 | ①液面温度 ②液体表面积 ③液面空气流速 | 气压的高低         |
+| 现象     | 使液体温度下降                      | 沸腾时液体温度不变 |
+
+#### 影响蒸发速率的因素
+
+| 因素             | 例子                               |
+| ---------------- | ---------------------------------- |
+| 液体的表面积     | 湿衣服撑开晾晒比堆在一起晾晒干得快 |
+| 温度             | 太阳光下晒比在阴凉处干得快         |
+| 液体表面空气流动 | 在通风处晾晒比在无风处晾晒干得快   |
+
+- 温度越高、液体表面积越大、液体表面空气流动越快，液体蒸发越快
+
+#### 蒸发的应用
+
+- 医生在发高烧的病人身上擦酒精，物理降温
+
+#### 沸腾的应用
+
+- 原油利用分馏的炼油技术
+- 医生利用沸点只有12℃的氯乙烷喷到运动员皮肤上
+
+## 液化
+
+- 液化的两种方法
+  - **降低温度**：所有气体，在温度降到足够低的时候都可以液化
+  - **压缩体积**：压缩体积可以使气体液化
+    - 如：液化石油气实在常温条件下，用压缩体积的方法使其成为液体
+- 液化过程是汽化过程的逆过程，汽化过程要吸热，液化过程要放热
+
+## 升华和凝华
+
+|              | 升华                                                     | 凝华                                                       |
+| ------------ | -------------------------------------------------------- | ---------------------------------------------------------- |
+| 定义         | 从液态直接变成气态                                       | 从气态直接变成固态                                         |
+| 吸热放热特点 | 升华吸热                                                 | 凝华放热                                                   |
+| 实质         | 固态物质表面的粒子克服其他粒子对它的引力进入空气中的过程 | 气体粒子碰到固态物质表面，被固态物质粒子的引力所束缚的过程 |
+| 例子         | ①结冰的衣服晾干 ②樟脑丸变小                              | ①冬冷天结霜 ②冰棍从冰箱里取出后表面逐渐形成一层白色粉状物  |
+
+
+
+`haiyaa 剩下的so废，懒得做了`
+
+`by jiahuiiiii @ 18th Sept 2022 10:21`
