--- a/Science Notes/J1 Science Notes/8. 物质常见的性质.md
+++ b/Science Notes/J1 Science Notes/8. 物质常见的性质.md
@@ -34,7 +34,7 @@
 | 铜       | 1083       | 海波 | 48       | 固态氦   | -272     |
 
 - 熔点和凝固点的区别：
-  - 两个点都是晶体在统一临界状态下的温度。
+  - 两个点都是晶体在统一临界状态下的温度
   - 同一种物质的**熔点和凝固点是同一个温度**，只不过是考虑的物态变化方向不同，从而叫出了不同的名字
   - **当物质从固态变化为液态时，叫熔点；当物质从液态变化为固态时，这个温度叫凝固点**
 - 无论晶体还是非晶体，熔化时都要从外界吸收热量；凝固时都要向外放出热量
@@ -64,6 +64,27 @@
 
 - 温度越高、液体表面积越大、液体表面空气流动越快，液体蒸发越快
 
+#### 隔水加热不能沸腾
+
+![隔水加热试管](https://i.ibb.co/1R7PRVf/image.jpg)
+
+- 沸腾要满足两个条件，①达到沸点 ②**不断吸收热量**
+- 当试管外的水沸腾时，温度为100度，里面也为100度。试管内的水不能进行热传递，就不能继续吸热了，也就不会沸腾
+
+#### 沸腾的气泡
+
+##### 水沸腾前气泡
+
+- 沸腾前加热过程中，由于水是热的不良导体，致使下部分的水温较高，上部分的水温较低，气体受热胀冷缩影响明显，因此底部气泡在上升过程中逐渐缩小
+- ![水沸腾前气泡](https://i.ibb.co/5hDxFyP/image.png)
+
+##### 水沸腾时气泡
+
+- 沸腾后容器内各部分水的温度都相同，水汽化后的蒸气形成气泡，气泡在上升过程中受压强的影响，越往上水的压强越小，气泡就会逐渐变大
+- 
+
+![水沸腾时气泡](https://i.ibb.co/9GGK5s8/image.png)
+
 #### 蒸发的应用
 
 - 医生在发高烧的病人身上擦酒精，物理降温
@@ -90,7 +111,7 @@
 | 实质         | 固态物质表面的粒子克服其他粒子对它的引力进入空气中的过程 | 气体粒子碰到固态物质表面，被固态物质粒子的引力所束缚的过程 |
 | 例子         | ①结冰的衣服晾干 ②樟脑丸变小                              | ①冬冷天结霜 ②冰棍从冰箱里取出后表面逐渐形成一层白色粉状物  |
 
-
+- 家用电灯泡用久了会发黑，是因为灯丝中的钨在高温下升华为钨蒸气，钨蒸气遇冷灯泡内壁，在灯的内壁上又凝华，即物态变化过程是**先升华后凝华**
 
 `haiyaa 剩下的so废，懒得做了`
 
