--- a/Science Notes/J3 Science Notes/book1/1 酸和氢气.md
+++ b/Science Notes/J3 Science Notes/book1/1 酸和氢气.md
@@ -120,17 +120,18 @@
 
   - **没有挥发性**
 
-  - 具有**吸水性**
+  - 具有**吸水性**【物理性质】`不明白的话就死记硬背吧，我也觉得是化学性质，但没办法`
 
     - **吸收空气中的水蒸气**，溶液质量会增加，质量分数会降低，因此硫酸需密封保存
     - **实验室**中常用**浓硫酸**做**气体干燥剂**[^浓硫酸干燥气体]，比如参杂了**水蒸气**的氢气，以得到**纯净且干燥**的氢气
-
+    - 浓硫酸不仅能吸收一般的游离态水(如空气中的水)，而且还能吸收某些结晶水合物(如CuSO4· 5H2O、Na2CO3·10H2O)中的水
+  
     [^浓硫酸干燥气体]: 浓硫酸可干燥酸性【O~2~，H~2~，CO】和中性气体【CO~2~，HCl，SO~2~】，但不可干燥碱性气体【NH~3~】，因为硫酸会与之发生中和反应
-
-  - 浓硫酸具有**脱水性**
-
+  
+  - 浓硫酸具有**脱水性**【化学性质】
+  
     - **根据水分子构成比例[^水的氢氧原子组成比]脱去物质中的氢氧元素**
-
+  
     - 由于脱水后剩下黑色的碳元素，所以这个现象也被称为**“碳化”**
   
     - 例：在方糖上挖一个凹槽并在该凹槽内滴入浓硫酸，观察一阵子后会发现方糖发黑且膨胀，这是因为方糖是一种有机物，由碳、氢、及氧元素组成，滴入浓硫酸后氢氧元素被脱去，生成黑色的碳
