--- a/Science Notes/J1 Science Notes/book1/4. 观察生物.md
+++ b/Science Notes/J1 Science Notes/book1/4. 观察生物.md
@@ -31,7 +31,7 @@
 | -------- | ------------------------------------------------------------ | -------------------------------- |
 | 腔肠动物 | ①生活在水中 ②身体呈辐射对称 ③体内有消化腔 ④有口无肛门 ⑤是最低等的多细胞生物 ⑥身体柔软 ⑦长有线状的触手（捕食） | 水螅、海蜇、海葵、珊瑚           |
 | 扁形动物 | ①身体背腹扁平 ②有头部和尾部的分化 ③有口无肛门 ④两侧对称      | 涡虫、绦(tāo)虫、扁形虫、血吸虫  |
-| 线形动物 | ①身体细长，呈圆柱形，两端略尖 ②寄生于人和动物的体内 ③身体前端有口，后端有肛门 | 蛔虫、钩虫                       |
+| 线形动物 | ①身体细长，呈圆柱形，两端略尖 ②寄生于人和动物的体内 ③身体前端有口，后端有肛门 | 蛔虫、钩虫、血丝虫               |
 | 环节动物 | ①身体由许多相似的环状体节组成 ②有真体腔 ③栖息于海洋、淡水或潮湿的土壤中 | 蚯蚓、沙蚕(cán)、水蛭（蚂蝗）    |
 | 软体动物 | ①身体柔软 ②有外套膜 ③身体外面有贝壳或有被外套膜包被的内壳    | 蚌(bàng)、蜗牛、乌贼、章鱼、鱿鱼 |
 | 节肢动物 | ①身体及附肢分节 ②体表有外骨骼 ③是种类和数量最多的一类动物    | 虾、蜈蚣、蝗虫、昆虫、蜘蛛、螃蟹 |
@@ -69,7 +69,9 @@
 
 - 保护色：动物适应栖息环境而具有与环境色彩相似的体色，有利于动物躲避敌害或捕猎其他动物
 - 警戒色：色彩鲜艳，容易识别，能够对敌害起预先警示的作用，有利于动物的自我保护
-- 拟态：生物的体表形状或色泽能够融入四周环境并隐藏起来的特征
+- 拟态：生物的体表形状或色泽能够融入四周环境并隐藏起来的特征；一个物种在进化过程中，获得与另一种成功物种相似的外表，以欺瞒捕猎者远离物种，或者是引诱猎物靠近物种
+  - 无毒的蛇却具有毒蛇般鲜艳的环纹，这是蛇的拟态
+
 - 生物不仅能够适应环境，也能影响环境
   - 生物的数量和分布会对环境中其他多种生物产生影响
     - 草原上草本植物的多少，会影响草食动物的数量
