--- a/Science Notes/J1 Science Notes/book1/5. 细胞和生物体.md
+++ b/Science Notes/J1 Science Notes/book1/5. 细胞和生物体.md
@@ -26,6 +26,7 @@
    - 细胞的遗传生命活动的控制中心
 3. 细胞质
    - 半透明胶状物
+   - 具有流动性、有利于细胞与外界环境之间进行物质交换的结构
    - 细胞进行各种生命活动的重要场所
 4. 细胞壁
    - 位于植物细胞膜外
@@ -108,6 +109,7 @@
 - 常用的玻片标本：切片、涂片、装片
 - 制作人口腔上皮细胞临时玻片时，使用生理食盐水的目的是保持细胞形状
   - 由于人的细胞液的浓度与浓度为0.9%的生理盐水的浓度一致，为了维持细胞的正常形态，不至于因吸水而膨胀，或失水而皱缩，应向载玻片上滴浓度为0.9%的生理盐水
+- 制作临时玻片时滴加碘液是为了染色，使观察更明显
 - 制作临时玻片时，必须让盖玻片的一边先接触水滴，然后再缓缓地盖上，其目的是避免盖玻片下面产生气泡
 - 制作临时装片的步骤
   - ①用洁净的纱布把载玻片、盖玻片擦试干净  
