--- a/Science Notes/J1 Science Notes/book1/7. 认识物质.md
+++ b/Science Notes/J1 Science Notes/book1/7. 认识物质.md
@@ -54,7 +54,7 @@
 
 - 布朗运动：悬浮在液体或气体中的微粒所做的永不停息的无规则运动
 - 原因：液体分子无规则运动对固体微小颗粒各个方向撞击的不均匀性造成的
-- 反映了液体粒子的无规则运动
+- **反映了液体粒子的无规则运动**
 - 特性
   - 无规则运动
   - 无生命现象
