--- a/Science Notes/J1 Science Notes/book2/1. 声音和耳.md
+++ b/Science Notes/J1 Science Notes/book2/1. 声音和耳.md
@@ -39,7 +39,7 @@
 
 - **温度升高**时，声音在空气中传播的**速度将增大**
 
-- 声音在空气中每秒钟传播的距离：约为343.2米/秒
+- 声音在空气中每秒钟传播的距离：约为343.2米/秒【340m/s】
 
 - 当空气速度与声波传播方向相同时，音速等于原来的加上空气速度，相反时则为相减
 
@@ -76,5 +76,29 @@
 - 在需要减少回声的地方，如钢琴室、录音棚、专用实验室等场所，都采用了各种吸音材料，以增强声波的吸收，消减声波的反射
 - 避免回声的方法：吸音墙、利用倾斜的天花板或不对称的墙、挂上窗帘
 
+### 计算题
+
+- 
+
 ### 音调、响度和音色
 
+|          | 音调                   | 响度                                                 | 音色                                     |
+| -------- | ---------------------- | ---------------------------------------------------- | ---------------------------------------- |
+| 定义     | 声音的高低             | 声音的强弱                                           | 声音的特色【不同的发声体，不同的*波形*】 |
+| 实质     | 发声体的振动频率       | 发声体的振动幅度                                     |                                          |
+| 单位     | 赫兹Hz                 | 分贝dB                                               |                                          |
+| 影响因素 | 振动频率越大，音调越高 | 声源的振动幅度越大，响度越大；距离声源越近，响度越大 | 声源的材料和结构及发声方法               |
+
+- 频率：单位赫兹，定义为物体在一秒内振动的次数
+- 影响振动频率的因素：声源的松紧、声源的长短、声源的粗细
+- 声源越细、声源越短、声源越紧，振动越快，音调越高
+- 人的音调
+  - 人是通过改变声带的松紧来发出不同音调的声音
+  - 男人的声带比女人更长更厚，所以男生的音调比女生要低
+- 声音是从声源向四面八方传播的，越到远处越分散
+- 为了增强声音的响度，人们在呼喊时，将双手围在自己的嘴边以可以减小声音的分散程度，从而使传到远处的声音具有较大的响度
+- 共鸣箱
+
+### 噪音
+
+`wtf no time lol`
