--- a/Science Notes/J2 Science Notes/book1/3. 水的溶解性.md
+++ b/Science Notes/J2 Science Notes/book1/3. 水的溶解性.md
@@ -139,8 +139,8 @@
 ### 3.2.1 溶解过程中的能量变化
 
 * 物质在溶解过程中，都伴随着能量变化
-    * 吸收热量：溶质的分子扩散过程，导致温度降低
-    * 释放热量：溶质分子和水分子作用形成水合分子，导致温度升高
+    * **吸收热量**：溶质的分子扩散过程，导致**温度降低**，如硝酸铵
+    * **释放热量**：溶质分子和水分子作用形成水合分子，导致**温度升高**，如氢氧化钠
     * 许多物质在溶解过程中没有明显的温度变化
 
 
@@ -174,8 +174,6 @@
               * 用干洗溶剂进行全面洗涤并烘干
               * 去除干洗溶剂后，熨烫衣服
 
-
-
 ## **3.3 溶解度**
 
 
@@ -184,9 +182,13 @@
 * 溶解度：在一定温度下，某物质在100g溶剂中无法再继续溶解时所溶解的质量
 * 溶解度数值：数值越大，溶解能力越强
 * 单位：g
-* 10g以上：易溶物质：氯化钠（食盐），蔗糖，氯化铵，硝酸钾
-* 1-10g：可溶物质：氯酸钾
-* 0.01-1g：难溶物质：氢氧化钙（石灰）
+
+|          | 在20℃时最多能溶解的溶质质量 | 例子                                 |
+| -------- | --------------------------- | ------------------------------------ |
+| 易溶物质 | 10g以上                     | 氯化钠（食盐），蔗糖，氯化铵，硝酸钾 |
+| 可溶物质 | 1-10g                       | 氯酸钾                               |
+| 难溶物质 | 0.01-1g                     | 氢氧化钙（石灰）                     |
+
 * 在20°C，盐的溶解度是36g的意思:：在20°C时，在100g的水中食盐最多能溶解36g
 * **温度，压强，溶剂种类**会影响溶解度的大小
     * 温度：对**固体溶质**的溶解度有影响
@@ -195,8 +197,8 @@
 
 ### **3.3.2 溶解度与温度的关系**
 
-* 大多数固体：溶解度随着温度升高而**增大**
-* 个别，气体固体物质：溶解度随着温度升高而减小
+* 大多数固体：溶解度随着**温度升高**而**增大**
+* 个别，气体固体物质：溶解度随着温度升高而减小，如氢氧化钙
 
 * 当压强一定时：溶解度随着温度上升而减小
     * 气体分子的运动速率加快，容易自水面溢出
@@ -241,7 +243,7 @@
 * 溶液质量 = 溶剂质量 + 溶质质量
 
 * $$
-    溶液的质量百分比浓度 = \frac{溶质的质量}{溶液的质量} \times100\%
+    溶液的质量百分比浓度 = \frac{溶质的质量}{溶液的质量} \times100\% =  \frac{溶质的质量}{溶剂的质量 + 溶质的质量} \times100\%
     $$
 
 #### 计算题
