--- a/Science Notes/J2 Science Notes/book1/4. 大气的压强.md
+++ b/Science Notes/J2 Science Notes/book1/4. 大气的压强.md
@@ -1,7 +1,8 @@
 # 第四章 大气的压强
 ## **4.1 大气压的存在**
 ### **4.1.1 大气压的存在**
-* 大气会从**各个方向对处于其中的物体产生压强**。**大气的压强**简称**大气压**。
+* 大气会从**各个方向对处于其中的物体产生压强**
+* **大气的压强**简称**大气压**。
 * 饮料为什么能够通过吸管进入口中：
     * 吸气时，**吸管内的空气的压强变小**（小于外界压强），造成**低压区**。于是，**大气压强利用气压差把饮料挤入吸管中**
 * 为什么吸盘能紧贴在墙面上：
@@ -14,31 +15,43 @@
     * 章鱼触手上的**吸盘**
     * 苍蝇爪掌中有**吸盘**
     * 有**摄食**，**运动**的功能
-* 大气的压强：单位面积受到的的压力
-* **相同时间**内撞击器壁的**粒子越多**，撞击器壁的**粒子速度越大**，器壁受到的**压强就越大**
+
+### 成因
+
+- 构成气体的大量例子永不停息地做无规则运动，这些运动的粒子对处在其中的表面的撞击，会对表面产生一个持续的压力
+
+* **大气的压强：单位面积受到的的压力**
+* 气体的压强是由构成气体的大量粒子对器壁的撞击而产生的，**相同时间**内撞击器壁的**粒子越多**，撞击器壁的**粒子速度越大**，气体的**压强就越大**
+
 ## **4.2 大气压的测定**
 ### **4.2.1 水银气压计**
 * 最早测定大气压值的科学家——**托里拆利**
 * **标准大气压** = **760mmHg/1.01 x 10<sup>5</sup>Pa**，相当于**760mm高水银柱**产生的压强
 * **1mmHg = 133Pa**
-* 托里拆利实验使用水银是因为水银在液体中密度最大、质量最大、水银支撑的高度最低。
+* 托里拆利实验使用水银是因为水银在液体中密度最大、质量最大、水银支撑的高度最低
 * **同一个地点**、**同一个时刻**做托里拆利实验，因为**大气压一定**，大气压支持的水银柱**高度就是一样的**
-* **大气压**和**玻璃管粗细**、**玻璃管是否竖直**、**水银槽内水银的多少**、**管内水银面与管顶的距离_无关_**。
-**水银气压计的结构**
-1. 管内水银面的**上方是真空**
-2. **管外大气压**支持着玻璃管内的水银柱
+* **大气压**和**玻璃管粗细**、**玻璃管是否竖直**、**水银槽内水银的多少**、**管内水银面与管顶的距离_无关_**
+
+#### **水银气压计的结构**
+
+- 管内水银面的**上方是真空**
+- **管外大气压**支持着玻璃管内的水银柱
+- 气压计上水银柱的高度为多少毫米，则大气压的数值就是多少毫米汞柱(mmHg)
+
 ### **4.2.2 空盒气压计**
 * 也称**无液气压计**
 * **密封的金属盒**（对大气压的变化十分敏感）
 * **大气压变化**时，金属盒的薄壁**向里凹进/向外凸出**
 * **金属盒的形状改变**，转动装置带动指针的转动
-**水银气压计和空盒气压针比较**
+
+### **水银气压计和空盒气压针比较**
+
 <table>
   <tr>
-   <td>水银气压计
-   </td>
-   <td>空盒气压计
-   </td>
+   <th>水银气压计
+   </th>
+   <th>空盒气压计
+   </th>
   </tr>
   <tr>
    <td>体积庞大，不方便携带
@@ -65,14 +78,15 @@
    </td>
   </tr>
 </table>
+
 小总结
-1. 测量大气压的仪器叫做**气压计**。气压计有**水银气压计**和**空盒气压计**。
-2. 一标准大气压（海平面附近的大气压）＝760毫米汞柱（mmHg）＝1.01 x 10<sup>5</sup>帕（Pa）
-3. 大气压强约等于76厘米高水银柱产生的压强。
+1. 测量大气压的仪器叫做**气压计**，气压计有**水银气压计**和**空盒气压计**
+2. 一**标准大气压**（海平面附近的大气压）＝**760毫米汞柱（mmHg）＝1.01 x 10<sup>5</sup>帕（Pa）**
+3. 大气压强约等于76厘米高水银柱产生的压强
 ## **4.3 大气压的变化**
 ### **4.3.1 大气压随海拔的变化**
 * 海拔越高，空气越稀薄（海拔高度与大气压含氧量的关系）
-* 由于**大气密度随高度增加而减小**，**海拔越高，大气压越小**。
+* 由于**大气密度随高度增加而减小**，***海拔越高，大气压越小***
 * 在**海拔为2000m范围内**，每**升高12m**，大气压约**减小133Pa ( 1mmHg )**
 ### **4.3.2 大气压对人体的影响**
 * 情绪
@@ -92,7 +106,7 @@
 * 压气机
     * **压气机**是用来给**气体加压**的，在飞行时飞机通过**压气机**保持飞机内外的气压。**稀薄**的空气通过了这个部件之后，**气压会上升**，一定体积的气体内**含氧量也会增加**
 * 如何消除由于快速**乘电梯上升**时产生的**耳膜不舒适感**？
-    * **张开嘴或吞咽**，使鼓膜内外气压相等。
+    * **张开嘴或吞咽**，使鼓膜内外气压相等
 ### **4.3.3 大气压对天气的影响**
 * 大气压的变化
     * 同一高度的不同区域，气压不一定相同
@@ -103,13 +117,14 @@
     * 空气**从上往下**流动
 * **空气受热膨胀上升**，两侧温度低的地方**空气却冷缩下沉**
 * **晴天气压**比阴天**高，冬天气压**比夏天**高**
+    * 冬天干燥寒冷，空气密度大于夏天，水汽的含量小于夏天，从而使氧浓度高于夏天，因此冬季气压高于夏季
 ###  **4.3.4 气压对液体沸点的影响**
-* **气压越高，沸点越高**
-* 高山上普通的锅难把饭煮熟，
+* ***气压越高，沸点越高***
+* 高山上普通的锅难把饭煮熟
     * 原因：
-        * **外界气压低**，液体的**沸点降低**。液体**容易沸腾**。可是，食物**不能达到足够的温度**，所以**难煮熟**。
+        * **外界气压低**，液体的**沸点降低**，液体**容易沸腾**，但**食物**不能达到足够的温度**，所以**难煮熟**
     * 解决方法：
-        * 用**高压锅**，**增大液面的气压**。它利用**液体沸点随气压的增大而升高的原理**制成的。压力锅的压强接近为2x10^5Pa，沸点约120°C。因此，它能够**提高烧煮的速度**和**节省燃料**。
+        * 用**高压锅**，**增大液面的气压**。它利用**液体沸点随气压的增大而升高的原理**制成的。压力锅的压强接近为2x10<sup>5</sup>Pa，沸点约120°C。因此，它能够**提高烧煮的速度**和**节省燃料**
 ## **4.4 气体压强与体积、温度的关系**
 ### 4.4.1 气体压强与体积的关系
 
@@ -117,10 +132,12 @@
 * 注射器原理
     * 将活塞**向内推**时，封闭气体的**体积减小**了，会觉得很**费劲**
     * **释放**后，活塞回到原来的位置，证明**封闭气体的压强大于外界气体的压强**
-* 在**温度不变**时，**一定质量**的气体，**体积越小，压强越大；体积越大，压强越小**
+* *在**温度不变**时，**一定质量**的气体，**体积越小，压强越大；体积越大，压强越小***
 * 用粒子运动的观点解释气体压强与体积的关系
-    * **一定质量**的气体，当**体积减小**时，**单位体积**中的**粒子数将会增多**。因此，**单位时间内撞击器壁单位面积上的粒子数**将会**增多**，**压强增大**。
-    **4.4.2 气体压强与温度的关系**
+    * **一定质量**的气体，当**体积减小**时，**单位体积**中的**粒子数将会增多**，**单位时间内撞击器壁单位面积上的粒子数**将会**增多**，**压强增大**
+
+### **4.4.2 气体压强与温度的关系**
+
 * **一定质量**的气体，在**体积不变**的条件下，其**压强**会随着**温度降低而减小**，随**温度的升高而增大**
 * 气球内气体的热胀冷缩现象
     * **一定质量**的气体，**温度升高**时**压强**会**增大**，使得气球内气体的压强**大于外界的压强**，**气球**才会**膨胀**
@@ -128,6 +145,7 @@
 * 踩扁的乒乓**拿热水烫烫**就鼓起来了。这是因为乒乓球里面的**气体受热体积增大**
 * 为什么**开冰箱有点费劲**？
     * 打开冰箱时，外界**“热”空气**会流进冰箱里面。这些**“热”空气冷却**后，**压强降低**，外界压强**大于**冰箱内压强，开冰箱时就会感到费劲
+
 ## **4.5 气压在生活中的应用**
 ### 4.5.1 真空压缩器
 
@@ -137,9 +155,9 @@
 ### 4.5.2 吸尘器
 
 * 工作原理
-    * 吸尘时，吸尘器会将**里面的空气排出 👉 低压区**。
+    * 吸尘时，吸尘器会将**里面的空气排出，形成 低压区**。
     * **外界的空气**就会在**大气压的作用下**，**带着尘垢**从吸尘器的地刷**进入**。
-    * 内部**过滤后** 👉 尘垢留在里面 👉 **空气再次排出**
+    * 内部**过滤后**， 尘垢留在里面， **空气再次排出**
 * 离心式水泵
     * 使用前为了**排除**泵壳里的**空气**需**向泵壳里灌满水**
     * 工作原理：
