--- a/Science Notes/J2 Science Notes/book1/4. 大气的压强.md
+++ b/Science Notes/J2 Science Notes/book1/4. 大气的压强.md
@@ -97,6 +97,7 @@
     * 人体对大气压的变化**有一个逐步适应的过程**。如果在**短时间**内**气压变化较大**，人体也是**来不及**做出**相应的调节**，就会觉得**不适**。
         * **高原反应**，**低原反应**
         * 症状：头晕、头痛、耳鸣、恶心、呕吐
+        * 高山病：由于机体的各个系统发生障碍而产生的，如中枢神经系统会出现兴奋过度亢进和抑制过度削弱的现象
     * 大气压会直接影响人体血液的溶解氧能力，大气压越高，溶解氧能力越强
 * 拔罐疗法原理
     * 正常情况下，**人皮肤内外侧受到的压强是相等的**
